--- a/Training/style.css
+++ b/Training/style.css
@@ -101,9 +101,10 @@ a img{
 }
 
 #catalog{
-    display: flex;
+    position:absolute;
+    display:flex;
     flex-wrap: wrap;
-    margin-top: 60px;
+    top: 900px;
 }
  
 #catalog img{
@@ -123,22 +124,20 @@ a img{
 #catalog h2{
     margin-bottom:0;
 }
-
-
-.row1{
-    
-}
-
 .item-2{
     
+    margin-left: 508px;
    
 }
 .item-3{
-   
+    margin-right: 200px;
+    margin-top:380px;
 
 }
 .item-4{
-    
+    margin-left: 215px;
+    margin-top:380px;
+
 }
 
 #content button{
@@ -148,10 +147,12 @@ a img{
     padding: 10px;
     border-radius: 20px;
     cursor:pointer;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 #content button:hover{
     background-color: rgb(0, 0, 0);
+    border: solid 1px;
+    border-color: white;
     color:white;
-    width: 120px;
+    transform:scale(1.2);
 }
