--- a/Training/shop/style.css
+++ b/Training/shop/style.css
@@ -4,6 +4,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+  transition: 0.3s;
 }
 header {
   position: sticky;
@@ -112,6 +113,11 @@ main h2 {
   position: sticky;
   top: 80px;
   width: 300px;
+  transition: 0.3s;
+}
+
+#side_menu a {
+  color: red;
   transition: 0.3s;
 }
 
